fix sign up buttons with nowrap and fixed padding for actionbox

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@ blockquote {
 
 .hero,
 .boxes,
-.actionmain,
 .footer {
     display: flex;
     justify-content: center;
@@ -27,14 +26,15 @@ blockquote {
     gap: 50px;
 }
 
-.hero {
-    padding: 50px 160px;
+.hero,
+.actionbox {
+    padding: 50px 100px;
     margin: 15px;
-    gap: 20px;
+    gap: 100px;
 }
 
 .top {
-        padding: 30px 160px;
+        padding: 20px 100px;
 }
 
 .info {
@@ -51,6 +51,11 @@ ul {
     padding: 0;
     margin: 0;
     overflow: hidden;
+}
+
+.link,
+.hero-text p {
+    font-size: 18px;    
 }
 
 .link {
@@ -74,16 +79,16 @@ button,
     color: #f9faf8;
     border-radius: 5px;
     padding: 5px 25px;
+    margin: 15px 0;
+    white-space: nowrap;
 }
 
 .signupOne {
     border: 1px solid #3882f6;
-    margin: 15px 0;
 }
 
 .signupTwo {
     border: 1px solid #f9faf8;
-    margin: 15px 0;
 }
 
 .logo {
@@ -104,12 +109,12 @@ button,
     font-size: 48px;
     font-weight: 800;
     color: #f9faf8;
+    padding: 10px 0;
 }
 
 .actionbox,
 .footer,
 .hero-text p {
-    font-size: 18px;
     color: #e5e7eb;
 }
 
@@ -153,24 +158,25 @@ blockquote {
     color: #1f2937;
     font-style: italic;
     font-weight: 300;
-    padding: 150px 300px 0 300px;
+    padding: 150px 200px 0 200px;
 }
 
 .quote p {
     font-size: 18px;
     font-weight: bold;
-    padding: 15px 300px 150px 0;
+    padding: 15px 200px 150px 0;
     text-align: end;
 }
 
+.actionmain {
+    padding: 50px 100px;
+}
+
 .actionbox {
-    padding: 30px 160px;
-    margin: 50px;
     border-radius: 5px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 150px;
 }
 
 .footer {
@@ -179,13 +185,9 @@ blockquote {
 
 @media (max-width: 600px) {
     h1,
+    h3,
+    p,
     .blockquote {
-        font-size: 3vw;
-    }
-    h3 {
-        font-size: 3vw;
-    }
-    p {
         font-size: 3vw;
     }
 }
